# Text-Translation-Service-Using-t5-base-model

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  setup.cfg
api/v1/: translate.py
core/: config.py
schemes/: translate.py
