[tool.poetry]
name = "translation-api"
version = "0.1.0"
description = ""
authors = ["Enoch Baffoe Peprah <bafpep@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
sentencepiece = "^0.1.97"
transformers = {extras = ["torch"], version = "^4.21.1"}

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
mypy = "^0.971"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
